[metadata]
name = disk_objectstore
version = attr: disk_objectstore.__version__
description = An implementation of an efficient object store writing directly into a disk folder
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/aiidateam/disk-objectstore
author = Giovanni Pizzi, Chris Sewell
license = MIT
license_file = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
keywords = object store, repository, file store, key-value store

[options]
packages = find:
install_requires =
    click
    sqlalchemy~=1.4.22
    typing-extensions;python_version < '3.8'
python_requires = ~=3.7
include_package_data = True

[options.packages.find]
exclude =
    test*

[options.entry_points]
console_scripts =
    dostore = disk_objectstore.cli:main

[options.extras_require]
dev =
    coverage
    pre-commit
    pytest
    pytest-benchmark
    pytest-cov
examples =
    memory-profiler
    profilehooks
    psutil
    pywin32;platform_system == "Windows"
docs =
    myst-parser~=0.15.0
    sphinx-book-theme~=0.1.2
    sphinx~=3.5.4
    sphinxext-rediraffe~=0.2.7
    sphinx_panels~=0.5.2
